# PeerSight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
sample_papers/: dummy_paper.txt  long_paper.txt
src/peersight/: __init__.py  agent.py  config.py  core.py  llm_client.py  main.py  parser.py  prompts.py  utils.py
tests/: test_llm_client.py  test_parser.py  test_prompts.py  test_utils.py
